layout/generic/nsContainerFrame.cpp
@@ -170,10 +170,12 @@ nsContainerFrame::InsertFrames(nsIAtom*  aListName,
 #ifdef IBMBIDI
     if (nsnull == aListName)
 #endif
-    // Ask the parent frame to reflow me.
-    AddStateBits(NS_FRAME_IS_DIRTY);
-    GetPresContext()->PresShell()->
-      FrameNeedsReflow(this, nsIPresShell::eTreeChange);
+    {
+      // Ask the parent frame to reflow me.
+      AddStateBits(NS_FRAME_IS_DIRTY);
+      GetPresContext()->PresShell()->
+        FrameNeedsReflow(this, nsIPresShell::eTreeChange);
+    }
   }
   return NS_OK;
 }
